--- a/python_tutorial/module1.ipynb
+++ b/python_tutorial/module1.ipynb
@@ -15,11 +15,6 @@
     "\n",
     "Somewhere in computer memory, it holds this *instance* of \"BLAHBLAH\".\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "But how can we keep referring back to our original object that we created?\n",
     "\n",
     "Variables are also objects, but a special kind that are considered pointers. \n",
@@ -37,8 +32,7 @@
    "outputs": [],
    "source": [
     "# FOR EXAMPLE\n",
-    "\"BLAHBLAH\"\n",
-    "'Blahbalh'"
+    "\"BLAHBLAH\""
    ]
   },
   {
@@ -86,9 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(our_original_string) # string\n",
-    "type(1.1) # float\n",
-    "type(1) # int"
+    "type(our_original_string)"
    ]
   },
   {
@@ -136,15 +128,8 @@
     "# we can also change the type of objects\n",
     "first_char_string = str(first_char) # changes the value of first char from an integer to a string\n",
     "print(type(first_char_string))\n",
-    "first_char_string\n"
+    "first_char_string"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "attachments": {},
@@ -188,7 +173,7 @@
    "outputs": [],
    "source": [
     "# INDEXING A STRING\n",
-    "i = 3  # TODO FOR YOU: change i and run the code to see how it affects the cell output\n",
+    "i = 0  # TODO FOR YOU: change i and run the code to see how it affects the cell output\n",
     "test_string = 'abcdef'\n",
     "test_string[i]"
    ]
@@ -208,8 +193,7 @@
     "# replace a value in the string: replace()\n",
     "# count number of a substring: count()\n",
     "# length: len()\n",
-    "\n",
-    "test_string_2.count(\"G\")\n"
+    "\n"
    ]
   },
   {
@@ -264,7 +248,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "example_simple_list2 = [test_string_2, test_string]\n",
+    "example_simple_list2 = [test_string_2]\n",
     "example_simple_list2"
    ]
   },
@@ -274,124 +258,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example_simple_list.pop(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "example_simple_list.remove('b')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "example_simple_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# COMMON LIST OPERATIONS # for more information: https://www.geeksforgeeks.org/python-lists/\n",
+    "# COMMON LIST OPERATIONS\n",
     "\n",
-    "\n",
-    "# length: len(...) \n",
+    "# length: len()\n",
     "# removing: pop(), remove()\n",
     "# ordering: reverse(), sort()\n",
     "# adding: append() vs extend()\n",
     "# accessing: using bracket indexing\n",
     "# updating: using bracket indexing\n",
     "# max/min: max(), min()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(\"test\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_list = ['hi', 'my', 'name', 'is', 'jiyoo.']\n",
-    "# length should be 5\n",
-    "len(sample_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_list.remove(\"hi\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_list.pop(1)#index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_list[1] = 'liar'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_list"
    ]
   },
   {
@@ -409,53 +284,13 @@
    "source": [
     "empty_dictionary = {}\n",
     "single_dictionary = {'id': 3004}\n",
-    "\n",
-    "\n",
     "simple_dictionary = {'id': 3004,\n",
     "                     'name': 'potato',\n",
     "                     'attributes': ['brown', 'small', 'yummy when fried']}\n",
-    "\n",
-    "\n",
     "simple_dictionary_2 = {1:100,\n",
     "                       2:200,\n",
     "                       3:300,\n",
     "                       4:400,}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "simple_dictionary['attributes'] # dictionary[key] = value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "simple_dictionary['test'] = ['brown', 'small', 'yummy when fried']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "simple_dictionary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "simple_dictionary_2[2]"
    ]
   },
   {
@@ -470,11 +305,7 @@
     "# inverse a dictionary using: \n",
     "# loop thruogh a dictionary using dictionary.iteritems()\n",
     "\n",
-    "# ** IMPORTANT RULE WITH DICTS ** you can't have two keys be identical in a dictionary. \n",
-    "# but you CAN have unique keys point to the same value. **\n",
-    "\n",
-    "\n",
-    "TODO: find a nice dictionary tutorial. "
+    "# ** IMPORTANT RULE WITH DICTS ** you can't have two keys be identical in a dictionary. but you CAN have unique keys point to the same value.\n"
    ]
   },
   {
@@ -487,53 +318,6 @@
     "- operations with strings\n",
     "- operations with functions\n",
     "- loops"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# LOGICS\n",
-    "#> \n",
-    "#< \n",
-    "#== or 'is'\n",
-    "#!= or 'not is'\n",
-    "\n",
-    "# is this variable x pointing to (something)\n",
-    "x == 4\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "True and False and True and True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "True or False or False or False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = 5\n",
-    "y = 10\n",
-    "\n",
-    "x is y"
    ]
   },
   {
@@ -556,7 +340,7 @@
    "outputs": [],
    "source": [
     "# try 1 + 1\n",
-    "addition = 1 + 1\n",
+    "addition = ...\n",
     "print('RESULT SHOULD BE 2. addition =', addition)\n",
     "\n"
    ]
@@ -598,7 +382,7 @@
    "source": [
     "# try 10-29\n",
     "\n",
-    "subtraction = 10-29\n",
+    "subtraction = ...\n",
     "print('RESULT SHOULD BE -19. subtraction =', subtraction)"
    ]
   },
@@ -609,7 +393,7 @@
    "outputs": [],
    "source": [
     "# try 3*2*2\n",
-    "multiplication = 3 * 2 * 2\n",
+    "multiplication = ...\n",
     "print('RESULT SHOULD BE 12. multiplication =', multiplication)"
    ]
   },
@@ -622,11 +406,11 @@
     "# try divide.\n",
     "\n",
     "# first: try a regular divide 3/2\n",
-    "regular_divide = 3/2\n",
+    "regular_divide = ...\n",
     "print('result should be 1.5. regular_divide = ', regular_divide)\n",
     "\n",
     "# second: try a integer divide with two // marks (this rounds down to the nearest integer) \"3//2\"\n",
-    "floor_divide = 3//2\n",
+    "floor_divide = ...\n",
     "print('result should be 1. floor_divide =', floor_divide)"
    ]
   },
@@ -637,13 +421,13 @@
    "outputs": [],
    "source": [
     "# power\n",
-    "import numpy as np\n",
+    "\n",
     "# first: regularly 10**2\n",
-    "starstar_power = 10**2\n",
+    "starstar_power = ...\n",
     "\n",
     "# second: example using math library. set base and power variables to pass the assertion below.\n",
-    "base = 10\n",
-    "power = 2\n",
+    "base = ...\n",
+    "power = ...\n",
     "\n",
     "math_power = np.power(base, power)\n",
     "\n",
@@ -697,13 +481,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -737,32 +514,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(5):\n",
-    "    print(i)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "count = 0   \n",
-    "jiyoo = 'not_tired'\n",
-    "while jiyoo != 'tired':\n",
-    "    print('hey')\n",
-    "    if count == 5:\n",
-    "        break\n",
-    "    count = count + 1\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -789,13 +540,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -817,11 +561,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### !Writing in pseudocode!\n",
+    "## !Writing in pseudocode!\n",
     "\n",
     "writing out functions in english words how you want to approach the solution is best practice!\n",
     "\n",
@@ -894,12 +637,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**if statements can be very powerful tools!!**\n",
-    "\n"
+    "if statements can be very powerful tools!!\n"
    ]
   },
   {
@@ -908,30 +649,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if True:\n",
-    "    print('AH')\n",
-    "elif True:\n",
-    "    print('great')\n",
-    "else:\n",
-    "    print('broeaeafe')\n",
-    "\n",
-    "print('-------')\n",
-    "\n",
-    "if True:\n",
-    "    print('AH')\n",
-    "if True: \n",
-    "    print('great')\n",
-    "else:\n",
-    "    print('aejaefpa')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "myFirstName = \"Doug\" # enter in your name.\n",
+    "myFirstName = 'Jiyoo' # enter in your name.\n",
     "\n",
     "if myFirstName.lower() == 'doug':\n",
     "    print('my last name is Parada.')\n",
@@ -943,42 +661,6 @@
     "    print('my last name is Mangali.')\n",
     "else:\n",
     "    print(myFirstName+', I don\\'t know who you are!')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"Clara yesterday said \"something\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"Clara yesterday said 'something'\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'Clara yesterday said \"something\"'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'Clara yesterday said \\'something\\''"
    ]
   },
   {
@@ -997,9 +679,9 @@
    "outputs": [],
    "source": [
     "# ONE WAY:::\n",
-    "myFirstName = \"DouG\"\n",
+    "myFirstName = \"Jiyoo\"\n",
     "fn_lower = myFirstName.lower()\n",
-    "last_name = '' \n",
+    "last_name = ''\n",
     "if fn_lower == 'doug':\n",
     "    last_name = 'Parada'\n",
     "elif fn_lower == 'kelly': # THE ELIF! its a concatenation of the word else if\n",
@@ -1043,7 +725,7 @@
     "\n",
     "# lets fill the dictionary with our names:\n",
     "\n",
-    "for i in range(len(first_names)): # 0 to 5\n",
+    "for i in range(len(first_names)):\n",
     "    fn = first_names[i]\n",
     "    ln = last_names[i]\n",
     "    first_and_last[fn] = ln \n",
@@ -1057,21 +739,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#first_and_last['kelly']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\n",
     "myFirstName = \"Jiyoo\"\n",
     "fn_lower = myFirstName.lower()\n",
     "keys = first_and_last.keys() # .keys() gives us the index values of the dictionary as a list.\n",
     "print('keys:', keys)\n",
-    "\n",
     "if fn_lower in first_and_last.keys(): \n",
     "    print(\"my last name is\", first_and_last[fn_lower])\n",
     "else:\n",
@@ -1102,8 +774,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict(zip(first_names, last_names))"
+    "dict(fnln_zip)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1120,7 +799,6 @@
    "source": []
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1179,15 +857,6 @@
     "\n",
     "with open('email_data.pkl', 'rb') as file:\n",
     "    inbox = pickle.load(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# play around with data here"
    ]
   },
   {
@@ -1263,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1305,7 +974,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# PROJECT SKELETON CODE: click on the bar on the left to expand:\n",
+    "# PROJECT SKELETON CODE: click on the blue bar on the left to expand:\n",
     "\n",
     "random.seed(123) # this sets the randomness to a fixed sequence of randomness (*ask me if ur curious)\n",
     "\n",
@@ -1323,6 +992,7 @@
     "            status.append('spam')\n",
     "        else:\n",
     "            status.append('good')\n",
+    "        \n",
     "        "
    ]
   },
@@ -1338,7 +1008,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1352,11 +1022,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.6 (default, Oct 18 2022, 12:41:40) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "7812ea015bdcee6f23a998adcdd2ef97c151c0c241b7b7070987d9313e41299d"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
