figured out a semi work around the middle names situation

--- a/sort.ipynb
+++ b/sort.ipynb
@@ -1030,17 +1030,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 239,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2987247514.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[239], line 6\u001b[0;36m\u001b[0m\n\u001b[0;31m    return [\"Approved\" for inst in roster['Instructors'] if inst == closest_match[0] else \"Not Approved\"]\u001b[0m\n\u001b[0m                                                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "def check_one_name(name, roster):\n",
     "    closest_match = difflib.get_close_matches(name, roster['Instructors'], n=1, cutoff=0.9)\n",
     "    if closest_match:\n",
     "        print(f'{name} who teaches {roster[\"Dept_Cleaned\"].values[0]} {roster[\"Course Number\"].values[0]} is probably in the spreadsheet as {closest_match[0]}.')\n",
-    "        approval_status.append('Approved')\n",
+    "        #approval_status.append('Approved')\n",
+    "        return [\"Approved\" for inst in roster['Instructors'] if inst == closest_match[0] else \"Not Approved\"]\n",
     "    else:\n",
-    "        print(f'{name} who teaches {roster[\"Dept_Cleaned\"].values[0]} {roster[\"Course Number\"].values[0]} is not in the spreadsheet.')\n",
+    "        approval_status = []\n",
+    "        \n",
     "        #approval_status.append('Marked as Not Approved by Code')\n",
     "        # check by splitting first, middle, last:\n",
     "        n = [w for w in name.split(' ') if len(w) > 1]\n",
@@ -1049,34 +1061,36 @@
     "            score = 0\n",
     "            if len(n) == len(a):\n",
     "                for i in range(len(n)):\n",
-    "                    print('same len', a[i], n[i], i, \":\", score)\n",
+    "                    #print('same len', a[i], n[i], i, \":\", score)\n",
     "                    score += difflib.SequenceMatcher(None, n[i], a[i]).ratio() \n",
     "                    #score = difflib.SequenceMatcher(None, n[len(n)-1], a[len(a)-1]).ratio()\n",
     "                \n",
     "                score /= len(n) # average score -- A higher SCORE IS BETTER (smaller differences!)\n",
+    "                if score > .8:\n",
+    "                    approval_status.append('Approved')\n",
     "            \n",
     "            elif len(n) > len(a): # classes.berkeley.edu display name is longer; likely theres a middle name or something\n",
     "                # TODO: loop through a list and match first name and end to middle.\n",
     "                # if first names don't match with a score above 80%, then its prob not a match:\n",
-    "                print(n, a)\n",
-    "                if difflib.SequenceMatcher(None, n[0], a[0]).ratio() > .8:\n",
-    "                    #print('fn err', n[len(n)-1], a[len(a)-1])\n",
-    "                \n",
-    "                    if difflib.SequenceMatcher(None, n[len(n)-1], a[len(a)-1]).ratio() > .8:\n",
+    "                #print(n, a)\n",
+    "                if difflib.SequenceMatcher(None, n[0], a[0]).ratio() > .7 and difflib.SequenceMatcher(None, n[len(n)-1], a[len(a)-1]).ratio() > .7:\n",
+    "                        #print(\"FIRST AND LAST MATCH w .7\")\n",
     "                        #print('lw err', n[len(n)-1], a[len(a)-1])\n",
     "                        #print('lw_err', difflib.SequenceMatcher(None, n[len(n)-1], a[len(a)-1]).ratio())\n",
-    "\n",
-    "                        print (\"match?:\", n[0] + ' ' + [len(n)-1], a[0] + ' ' + a[len(a)-1])\n",
-    "                \n",
+    "                        n_mid = ' '.join(n[1:len(n)-1]).strip()\n",
+    "                        a_mid = ' '.join(a[1:len(a)-1]).strip()\n",
+    "                        middle_score = difflib.SequenceMatcher(None, n_mid, a_mid).ratio()\n",
+    "                        if n_mid == '' or a_mid == '':\n",
+    "                            #print(\"NO MATCH: Should Doublecheck: Middle name differences.\")\n",
+    "                            approval_status.append('Unsure')\n",
+    "                        elif middle_score > .3:\n",
+    "                            #print (\"match?:\", n[0] + ' ' + n[len(n)-1], a[0] + ' ' + a[len(a)-1])\n",
+    "                            approval_status.append('Approved')\n",
     "                else:\n",
+    "                    approval_status.append('Not Approved')\n",
+    "                \n",
     "                    # simplified: match the middle words. see how diff it is.\n",
-    "                    n_mid = ' '.join(n[1:len(n)-1]).strip()\n",
-    "                    a_mid = ' '.join(a[1:len(a)-1]).strip()\n",
-    "                    middle_score = difflib.SequenceMatcher(None, n_mid, a_mid).ratio()\n",
-    "                    if n_mid == '' or a_mid == '' and middle_score :\n",
-    "                        print(\"Should Doublecheck: Middle name differences.\")\n",
-    "                    else:\n",
-    "                        print('middle:', n_mid, a_mid, ':', )\n",
+    "                    \n",
     "                \n",
     "                #print(f'{name} who teaches {roster[\"Dept_Cleaned\"].values[0]} {roster[\"Course Number\"].values[0]} doesn\\'t match {apr_name}.')\n",
     "                \n",
@@ -1084,41 +1098,44 @@
     "                #print(roster['Co-instructor?'])\n",
     "                if roster['Co-instructor?'].values[i] == True:\n",
     "                    \n",
-    "                    print(f'{name} who teaches {roster[\"Dept_Cleaned\"].values[0]} {roster[\"Course Number\"].values[0]} doesn\\'t match {apr_name} by co-instructor rule')\n",
-    "                    return False, 0\n",
+    "                    #print(f'{name} who teaches {roster[\"Dept_Cleaned\"].values[0]} {roster[\"Course Number\"].values[0]} doesn\\'t match {apr_name} by co-instructor rule')\n",
+    "                    approval_status.append('Not Approved')\n",
     "                \n",
     "                else: # rare case where senate name is longer than display name -- likely a middle name or secondary name somewhere\n",
     "                    # if first names don't match with a score above 80%, then its prob not a match:\n",
-    "                    if difflib.SequenceMatcher(None, n[0], a[0]).ratio()  < .20:\n",
-    "                        print('fn err')\n",
-    "                        continue\n",
-    "                    \n",
-    "                    if difflib.SequenceMatcher(None, n[len(n)-1], a[len(a)-1]).ratio() < .20:\n",
-    "                        print('lw_err')\n",
-    "                        continue\n",
-    "                    \n",
-    "                    # simplified: match the middle words. see how diff it is.\n",
-    "                    n_mid = ' '.join(n[1:len(n)-1]).strip()\n",
-    "                    a_mid = ' '.join(a[1:len(a)-1]).strip()\n",
-    "\n",
-    "                    print('middle:', n_mid, a_mid, ':', difflib.SequenceMatcher(None, n_mid, a_mid ).ratio())\n",
-    "\n",
-    "                    if n_mid == '' or a_mid == '':\n",
-    "                        print(\"Should Doublecheck: Middle name differences.\")\n",
-    "                    \n",
-    "\n",
-    "                    \n",
-    "                            \n",
-    "                                \n",
-    "\n",
-    "\n",
+    "                    if difflib.SequenceMatcher(None, n[0], a[0]).ratio() > .7 and difflib.SequenceMatcher(None, n[len(n)-1], a[len(a)-1]).ratio() > .7:\n",
+    "                        #print(\"FIRST AND LAST MATCH w .7\")\n",
+    "                        #print('lw err', n[len(n)-1], a[len(a)-1])\n",
+    "                        #print('lw_err', difflib.SequenceMatcher(None, n[len(n)-1], a[len(a)-1]).ratio())\n",
+    "                        n_mid = ' '.join(n[1:len(n)-1]).strip()\n",
+    "                        a_mid = ' '.join(a[1:len(a)-1]).strip()\n",
+    "                        middle_score = difflib.SequenceMatcher(None, n_mid, a_mid).ratio()\n",
+    "                        if n_mid == '' or a_mid == '':\n",
+    "                            #print(\"NO MATCH: Should Doublecheck: Middle name differences.\")\n",
+    "                            approval_status.append('Unsure')\n",
+    "                        elif middle_score > .3:\n",
+    "                            #print (\"match?:\", n[0] + ' ' + n[len(n)-1], a[0] + ' ' + a[len(a)-1])\n",
+    "                            approval_status.append('Approved')\n",
+    "                    else:\n",
+    "                        approval_status.append('Not Approved')\n",
+    "    print(approval_status)\n",
+    "    print('Approved' in approval_status)\n",
+    "    if 'Approved' in approval_status:\n",
+    "        i = approval_status.index('Approved')\n",
+    "        print(f'{name} who teaches {roster[\"Dept_Cleaned\"].values[0]} {roster[\"Course Number\"].values[0]} is probably APPROVED as {approved[\"Instructors\"].values[i]}.')\n",
+    "    elif 'Unsure' in approval_status:\n",
+    "        i = approval_status.index('Unsure')\n",
+    "        print(f'{name} who teaches {roster[\"Dept_Cleaned\"].values[0]} {roster[\"Course Number\"].values[0]} is probably APPROVED as {approved[\"Instructors\"].values[i]}. Please double check.')\n",
+    "    else:\n",
+    "        print(f'{name} who teaches {roster[\"Dept_Cleaned\"].values[0]} {roster[\"Course Number\"].values[0]} is not in the spreadsheet.')\n",
+    "    return approval_status\n",
     "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1128,35 +1145,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sarah erin gold mcbride who teaches AMERSTD 101AC is not in the spreadsheet.\n",
-      "['sarah', 'erin', 'gold', 'mcbride'] ['David', 'Henkin']\n",
-      "Should Doublecheck: Middle name differences.\n",
-      "['sarah', 'erin', 'gold', 'mcbride'] ['Donald', 'McQuade']\n",
-      "fn err mcbride McQuade\n",
-      "['sarah', 'erin', 'gold', 'mcbride'] ['Kathleen', 'Moran']\n",
-      "Should Doublecheck: Middle name differences.\n",
-      "['sarah', 'erin', 'gold', 'mcbride'] ['Mark', 'Brilliant']\n",
-      "Should Doublecheck: Middle name differences.\n",
-      "['sarah', 'erin', 'gold', 'mcbride'] ['Michael', 'Cohen']\n",
-      "fn err mcbride Cohen\n",
-      "['sarah', 'erin', 'gold', 'mcbride'] ['Robert', 'Nelson']\n",
-      "fn err mcbride Nelson\n",
-      "['sarah', 'erin', 'gold', 'mcbride'] ['Sarah', 'Gold', 'McBride']\n",
-      "middle: erin gold Gold : 0.46153846153846156\n",
-      "['sarah', 'erin', 'gold', 'mcbride'] ['Waldo', 'Martin']\n",
-      "Should Doublecheck: Middle name differences.\n"
+      "['Not Approved', 'Not Approved', 'Not Approved', 'Not Approved', 'Not Approved', 'Not Approved', 'Not Approved']\n",
+      "False\n",
+      "sarah gold mcbride who teaches AMERSTD 101AC is not in the spreadsheet.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['Not Approved',\n",
+       " 'Not Approved',\n",
+       " 'Not Approved',\n",
+       " 'Not Approved',\n",
+       " 'Not Approved',\n",
+       " 'Not Approved',\n",
+       " 'Not Approved']"
+      ]
+     },
+     "execution_count": 238,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "check_one_name(\"sarah erin gold mcbride\", approved)\n",
+    "check_one_name(\"sarah gold mcbride\", approved)\n",
     "\n"
    ]
   },
